--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -100,6 +100,7 @@ body {
         padding: rhythm(.5) gutter();
         border-color: #d7d7d7;
         @include leading-border(1px, .5, $base-font-size, solid);
+        vertical-align: middle;
     }
     
     thead + tbody tr:first-child {
@@ -563,10 +564,9 @@ div[role="main"] {
 /* @group ----- Browse views ----- */
 
 .browse .resource-name {
-    float: left;
-    max-width: calc(100% - 5.5em);
-    overflow: hidden;
-    text-overflow: ellipsis;
+    display: inline-block;
+    max-width: calc(100% - 8.5em);
+    vertical-align: middle;
 }
 
 .browse .add.button,
@@ -578,6 +578,24 @@ div[role="main"] {
 .browse td:first-child,
 .browse th:first-child {
     width: 50%;
+}
+
+.browse td,
+.browse th {
+    padding: rhythm(.5) rhythm(.25);
+}
+
+.browse tr:last-of-type td,
+.browse tr:last-of-type th,
+ {
+    @include trailing-border(1px, .5, $base-font-size, solid);
+}
+
+.browse img {
+    width: rhythm(1.5);
+    display: inline-block;
+    margin: rhythm(-.25) rhythm(.25) rhythm(-.25) 0;
+    vertical-align: middle;
 }
 
 .actions {
@@ -642,9 +660,9 @@ th .sorted-asc,
 th .sorted-desc {
     border-color: #d2d2d2;
     padding: 0 .5em;
-    @include trailing-border(3px, .25, $base-font-size, solid);
-    margin: 0 0 rhythm(-.25) -.5em;
-    width: calc(100% + 1em);
+    @include trailing-border(3px, .5, $base-font-size, solid);
+    margin: 0 0 rhythm(-.5) -.375em;
+    width: calc(100% + .75em);
 }
 
 th a.sortable:after,
@@ -656,7 +674,7 @@ th .sorted-desc:before {
     position: absolute;
     font-size: .75 * $base-font-size;
     right: .5em;
-    top: rhythm(.625);
+    top: rhythm(1);
     z-index: 2;
 }
 
@@ -1485,11 +1503,8 @@ body.sidebar-open #content {
 .resource-list {
     width: 100%;
     
-    
-    .placeholder {
-        background-color: #666;
+    img {
         width: rhythm(1.5);
-        height: rhythm(1.5);
         float: left;
         margin-left: rhythm(.25);
     }
